--- a/index.html
+++ b/index.html
@@ -12,12 +12,27 @@
     <main>
         <section id="login">
             <div id="imagem">
-                foto
+                <!-- Aqui vai a imagem nas CSS-->
             </div>
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para acessar sua conta e poder fazer as configurações no seu ambiente</p>
-                <form action="login.php" method="post"></form>
+                <form action="login.php" method="post" autocomplete="on">
+                    <p id="campo1">
+                        <label for="iemail"> <img src="imagens/login.png" alt=""></label>
+                            <input type="email" name="email" id="iemail" required placeholder="E-mail" size="25">
+                    </p>
+                    <p id="campo2">
+                        <label for="isenha"> <img src="imagens/senha.png" alt=""></label>
+                            <input type="password" name="senha" id="isenha" required min="8" placeholder="Min 8 caracteres">
+                    </p>
+                    <p>
+                        <input type="submit" value="Entrar">
+                    </p>
+                    <p>
+                        <input type="button" value="Esqueci a senha">
+                    </p>
+                </form>
             </div>
         </section>
     </main>
