--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <span class="material-symbols-outlined">
                             vpn_key
                             </span>
-                        <input type="password" name="senha" id="isenha" placeholder="ua Senha" required autocomplete="current-password" minlength="8" maxlength="20">
+                        <input type="password" name="senha" id="isenha" placeholder="sua senha" required autocomplete="current-password" minlength="8" maxlength="20">
                         <label for="isenha">Senha</label>
                     </div>
                     <input type="submit" value="Entrar">
